Teambuilder and dex search: ability, item and move description columns now shrink with an ellipsis instead of float-wrapping under the clipped row when the pane is narrow, fixing invisible descriptions whenever the results pane is under about 720px wide

--- a/pokemon-showdown-client/play.pokemonshowdown.com/style/battle-search.css
+++ b/pokemon-showdown-client/play.pokemonshowdown.com/style/battle-search.css
@@ -280,16 +280,14 @@
 	white-space: nowrap;
 	padding-top: 8px;
 	font-size: 8pt;
-	width: 488px;
+	float: none;
+	display: block;
+	width: auto;
+	max-width: 488px;
 	height: 21px;
 	overflow: hidden;
+	text-overflow: ellipsis;
 	color: #777777;
-}
-.dexlist .movedesccol {
-	width: 284px;
-}
-.dexlist .itemdesccol {
-	width: 464px;
 }
 
 .dexlist .sortrow {
